--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "node bot.js"
   },
   "dependencies": {
+    "minecraft-data": "^3.100.0",
     "mineflayer": "^4.33.0",
-    "mineflayer-pathfinder": "^2.4.5"
+    "mineflayer-auto-eat": "^5.0.3",
+    "mineflayer-pathfinder": "^2.4.5",
+    "mineflayer-pvp": "^1.3.2"
   }
 }
